--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="planet"></div>
   </div>
 
-<a href="mailto:skyethedev@gmail.com" class="cta">Get Started</a>
+<a href="mailto:skyethedev@gmail.com" class="cta">Email Me</a>
 
   <script>
     const planets = document.querySelectorAll('.planet');
